<resources>

    <string name="app_name">KMGdańsk</string>

    <string name="title_home">Ulubione</string>
    <string name="title_dashboard">Pobliskie</string>
    <string name="title_notifications">Przystanki</string>
    <string name="title_profile">Linie</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trams">trams</string>
    <string name="bus">linie autobusowe</string>
    <string name="przystanek">nazwa przystanku</string>
    <string name="linie">Dostępny transport:</string>

    <string name="tramwajzwykly">Linia tramwajowa dzienna zwykła:</string>
    <string name="tramwajpospieszny">Linia tramwajowa dzienna pośpieszna</string>
    <string name="tramwajzastepczy">Linia tramwajowa zastępcza</string>
    <string name="autobuszwykły">Linia autobusowa zwykła</string>
    <string name="autobuspospieszny">Linia autobusowa pośpieszna</string>
    <string name="autobuszastepczy">Linia autobusowa zastępcza</string>
    <string name="autobusnocny">Linia autobusowa nocna</string>
</resources>
